# rof

./: .gitignore  HOWITWORKS.md  README.md  pyproject.toml
demos/: mcp_client_demo.py  rof_mock_demo.py  rof_web_demo.py  routing_pipeline_demo.py  routing_sample.py  template_variables_demo.py
demos/database_tool/: README.md  inventory_analysis.rl  run_inventory_demo.py
demos/docs/: how-to-guide.md
demos/rag_tool/: README.md  rof_knowledge_qa.rl  run_rag_demo.py
demos/rof_ai_demo/: agent.py  console.py  how-to-agent.md  imports.py  memory.py  observe.py  output_layout.py  planner.py  rof_ai_demo.md  rof_ai_demo.py  session.py  telemetry.py  wizard.py
demos/rof_bot/: .env.example  MANUAL.md  README.md  domain.yaml  pipeline.yaml  pytest.ini  requirements.txt
demos/rof_bot/bot_service/: __init__.py  db.py  main.py  metrics.py  pipeline_factory.py  scheduler.py  settings.py  state_adapter.py  websocket.py
demos/rof_bot/bot_service/routers/: __init__.py  control.py  status.py
demos/rof_bot/client/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf.template  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
demos/rof_bot/client/src/: index.css  main.tsx
demos/rof_bot/demos/default/: 02_analyse.rl  04_decide.rl  05_execute.rl
demos/rof_bot/demos/news_monitor/: 01_search.rl  04_decide.rl  05_report.rl  README.md
demos/rof_bot/docs/: HOWITWORKS.md  MANUAL.md  METRICS.md  rof_bot_implementation_plan.md
demos/rof_bot/infra/: Dockerfile  docker-compose.yml
demos/rof_bot/knowledge/: README.md
demos/rof_bot/knowledge/domain/: action_vocabulary.md  decision_criteria.md  guardrails.md
demos/rof_bot/knowledge/examples/: defer_examples.jsonl  escalate_examples.jsonl  proceed_examples.jsonl  skip_examples.jsonl
demos/rof_bot/knowledge/operational/: dry_run_guide.md  error_codes.md  escalation_policy.md
demos/rof_bot/scripts/: ingest_knowledge.py
demos/rof_bot/tests/: __init__.py  conftest.py
demos/rof_bot/tests/integration/: __init__.py  test_pipeline_stub.py
demos/rof_bot/tests/unit/: __init__.py  test_tools.py
demos/rof_bot/tools/: __init__.py  action_executor.py  analysis.py  context_enrichment.py  data_source.py  external_signal.py  state_manager.py
demos/rof_bot/workflows/: 01_collect.rl  02_analyse.rl  03_validate.rl  05_execute.rl  05_report.rl  pipeline.yaml
docs/: mcp_integration.md  relatelang-orchestration.md  relatelang_spec.md  rof_cli_manual.md  rof_routing.md
src/rof.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rof_framework/: __init__.py  _stubs.py  rof_cli.py  rof_core.py  rof_governance.py  rof_llm.py  rof_pipeline.py  rof_routing.py  rof_testing.py  rof_tools.py
src/rof_framework/cli/: __init__.py  main.py
src/rof_framework/core/: __init__.py
src/rof_framework/core/ast/: __init__.py  nodes.py
src/rof_framework/core/conditions/: __init__.py  condition_evaluator.py
src/rof_framework/core/context/: __init__.py  context_injector.py
src/rof_framework/core/events/: __init__.py  event_bus.py
src/rof_framework/core/graph/: __init__.py  workflow_graph.py
src/rof_framework/core/interfaces/: __init__.py  llm_provider.py  tool_provider.py
src/rof_framework/core/lint/: __init__.py  linter.py
src/rof_framework/core/orchestrator/: __init__.py  orchestrator.py
src/rof_framework/core/parser/: __init__.py  rl_parser.py
src/rof_framework/core/state/: __init__.py  state_manager.py
src/rof_framework/governance/: __init__.py
src/rof_framework/governance/audit/: __init__.py  config.py  models.py  subscriber.py
src/rof_framework/llm/: __init__.py  factory.py  tracking.py
src/rof_framework/llm/providers/: __init__.py  anthropic_provider.py  base.py  (+4 more)
src/rof_framework/pipeline/: __init__.py  builder.py  config.py  result.py  runner.py  serializer.py  stage.py
src/rof_framework/routing/: __init__.py  decision.py  hints.py  inspector.py  memory.py  normalizer.py  orchestrator.py  pipeline.py  router.py  scorer.py  tracer.py  updater.py
src/rof_framework/testing/: __init__.py  assertions.py  mock_llm.py  nodes.py  parser.py  runner.py
src/rof_framework/tools/: __init__.py
tests/: README.md  conftest.py  quick_test.py  run_all_tests.py  run_tests.bat  run_tests.sh  test_audit_log.py  test_cli.py  test_condition_evaluator.py  test_core_ast.py  test_core_integration.py  test_core_parsing.py  test_fixtures_live_integration.py  test_generic_providers.py  test_improvements.py  test_lint.py  test_llm_providers.py  test_mcp.py  test_ollama_live.py  test_parser.py  test_pipeline_chains.py  test_pipeline_fanout_and_extras.py  test_pipeline_result_and_renderer.py  test_pipeline_runner.py  test_response_parser.py  test_retry_manager.py  test_routing.py  test_testing_framework.py  test_tool_output_graph_passthrough.py  test_tool_provider.py  test_tools_live_integration.py  test_tools_registry.py
tests/fixtures/: customer_segmentation.rl  lint_errors.rl  loan_approval.rl  no_goals.rl  syntax_error.rl
tests/fixtures/pipeline_fakenews_detection/: 01_extract.rl  02_verify_source.rl  03_cross_reference.rl  04_bias_analysis.rl  05_decide.rl  06_report.rl  README.md  pipeline.yaml  run_factcheck.py
tests/fixtures/pipeline_load_approval/: 01_gather.rl  02_analyse.rl  03_decide.rl  README.md  pipeline.yaml
tests/fixtures/pipeline_output_mode/: 01_extract.rl  02_classify.rl  README.md  pipeline.yaml  run_demo.py
tests/fixtures/pipeline_questionnaire/: 01_generate.rl  02_interact.rl  03_evaluate.rl  README.md  pipeline.yaml  pipeline_questionnaire.yaml
tests/fixtures/testing/: customer_segmentation.rl.test  loan_approval.rl.test
tests/fixtures/tools/: README.md  ai_codegen.rl  api_call.rl  code_runner.rl  database_query.rl  file_reader.rl  human_in_loop.rl  llm_player.rl  lua_run.rl  lua_save.rl  rag_retrieval.rl  validator.rl  web_search.rl
tests/fixtures/truck/: README.md  truck_01_gather.rl  truck_02_analyse.rl  truck_03_decide.rl  truck_pipeline.yaml
tools/gitlab_mcp/: README.md  gitlab_client.py  server.py  test_mcp.py
(+56 files in other folders)
