[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "rof"
version         = "0.1.0"
description     = "RelateLang Orchestration Framework — run structured LLM workflows from .rl files"
readme          = "README.md"
license         = "Apache-2.0"
requires-python = ">=3.10"
keywords        = ["llm", "workflow", "relatelang", "orchestration", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# No mandatory runtime deps — each LLM SDK is optional.
dependencies = []

[project.optional-dependencies]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
gemini    = ["google-generativeai>=0.5"]
ollama    = ["httpx>=0.25"]
pipeline  = ["pyyaml>=6.0"]
routing   = [
    "sentence-transformers>=2.2",   # embedding-based ToolRouter strategy
    "nvidia-ml-py",                 # replaces deprecated pynvml; silences PyTorch FutureWarning
]
dev       = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyyaml>=6.0",
    "nvidia-ml-py",                 # silences PyTorch/pynvml FutureWarning in routing tests
]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
    "google-generativeai>=0.5",
    "httpx>=0.25",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2",
    "nvidia-ml-py",
]

[project.scripts]
rof = "rof_framework.rof_cli:main"

[project.urls]
Homepage   = "https://github.com/fischerf/rof"
Repository = "https://github.com/fischerf/rof"
Issues     = "https://github.com/fischerf/rof/issues"

# ─── Tool configuration ──────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.data-files]
"tests" = [
    "tests/conftest.py",
    "tests/quick_test.py",
    "tests/run_all_tests.py",
    "tests/run_tests.bat",
    "tests/run_tests.sh",
    "tests/README.md",
    "tests/test_cli.py",
    "tests/test_core_ast.py",
    "tests/test_core_integration.py",
    "tests/test_core_parsing.py",
    "tests/test_lint.py",
    "tests/test_llm_providers.py",
    "tests/test_parser.py",
    "tests/test_pipeline_runner.py",
    "tests/test_routing.py",
    "tests/test_tools_live_integration.py",
    "tests/test_tools_registry.py",
]
"tests/fixtures" = [
    "tests/fixtures/customer_segmentation.rl",
    "tests/fixtures/lint_errors.rl",
    "tests/fixtures/loan_approval.rl",
    "tests/fixtures/no_goals.rl",
    "tests/fixtures/syntax_error.rl",
]
"tests/fixtures/tools" = [
    "tests/fixtures/tools/README.md",
    "tests/fixtures/tools/ai_codegen.rl",
    "tests/fixtures/tools/api_call.rl",
    "tests/fixtures/tools/code_runner.rl",
    "tests/fixtures/tools/database_query.rl",
    "tests/fixtures/tools/file_reader.rl",
    "tests/fixtures/tools/human_in_loop.rl",
    "tests/fixtures/tools/llm_player.rl",
    "tests/fixtures/tools/lua_run.rl",
    "tests/fixtures/tools/lua_save.rl",
    "tests/fixtures/tools/rag_retrieval.rl",
    "tests/fixtures/tools/validator.rl",
    "tests/fixtures/tools/web_search.rl",
]
"tests/fixtures/pipeline_fakenews_detection" = [
    "tests/fixtures/pipeline_fakenews_detection/01_extract.rl",
    "tests/fixtures/pipeline_fakenews_detection/02_verify_source.rl",
    "tests/fixtures/pipeline_fakenews_detection/03_cross_reference.rl",
    "tests/fixtures/pipeline_fakenews_detection/04_bias_analysis.rl",
    "tests/fixtures/pipeline_fakenews_detection/05_decide.rl",
    "tests/fixtures/pipeline_fakenews_detection/06_report.rl",
    "tests/fixtures/pipeline_fakenews_detection/pipeline.yaml",
    "tests/fixtures/pipeline_fakenews_detection/run_factcheck.py",
]
"tests/fixtures/pipeline_load_approval" = [
    "tests/fixtures/pipeline_load_approval/01_gather.rl",
    "tests/fixtures/pipeline_load_approval/02_analyse.rl",
    "tests/fixtures/pipeline_load_approval/03_decide.rl",
    "tests/fixtures/pipeline_load_approval/README.md",
    "tests/fixtures/pipeline_load_approval/pipeline.yaml",
]
"tests/fixtures/pipeline_questionnaire" = [
    "tests/fixtures/pipeline_questionnaire/01_generate.rl",
    "tests/fixtures/pipeline_questionnaire/02_interact.rl",
    "tests/fixtures/pipeline_questionnaire/03_evaluate.rl",
    "tests/fixtures/pipeline_questionnaire/README.md",
    "tests/fixtures/pipeline_questionnaire/pipeline_questionnaire.yaml",
]

[tool.pytest.ini_options]
testpaths     = ["tests"]
addopts       = "-v --tb=short --cov=rof_framework --cov-report=html"
python_files  = ["test_*.py"]
python_classes= ["Test*"]
python_functions = ["test_*"]
markers = [
    "live_integration: tests that require a real LLM backend (set ROF_TEST_PROVIDER + ROF_TEST_API_KEY to enable)",
]

[tool.coverage.run]
source        = ["rof_framework"]
branch        = true

[tool.coverage.paths]
# Map the installed/editable src layout so coverage resolves correctly
source = [
    "src/rof_framework",
    "*/site-packages/rof_framework",
]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
omit          = ["tests/*"]

[tool.coverage.html]
directory     = "htmlcov"

[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # long lines tolerated in tests

[tool.mypy]
python_version        = "3.10"
ignore_missing_imports = true
strict                 = false
